Added some techs and shit

--- a/tech_tree.html
+++ b/tech_tree.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="site.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body style="background-color: black;">
-    <img src="/assets/techs/applied_physics.svg" alt="">
+    <div class="tech-card">
+        <div class="tech-icon">
+            <img src="/assets/techs/applied_physics.svg" alt="">
+        </div>
+        <div class="tech-info">
+            <div class="name">Applied Physics</div>
+            <div class="track conquer">Conquer 1</div>
+            <div class="data">
+                <div><strong>Weapons:</strong>Laser (A2)</div>
+                <div><strong>Leads To:</strong>Nonlinear Mathematics, High Energy Chemistry, Optical Computers</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
